# SmartLiva

./: .env.example  .env.production  .gitignore  .vercelignore  PRESENTATION_GUIDE.md  nixpacks.toml  railway.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
.vercel/: project.json
app/: BACKEND_DEPLOYMENT.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  GPT_MIGRATION.md  MODEL_FILES_GUIDE.md  QUICK_REF.md  RAILWAY_DEPLOY.md  README.deployment.md  README.md  SIZE_ISSUE.md  START_HERE.md  SUMMARY.md  VERCEL_CONFIG.md  VERCEL_FRONTEND_DEPLOY.md  build.sh  check-deployment.sh  cleanup-large-files.sh  deploy-vercel.sh  docker-compose.production.yml  docker-compose.yml  migrate-to-gpt.sh  nixpacks.toml  package.json  smartliva.py  vercel.json
app/Playground/: python_exercises_day3.ipynb
app/backend/: .env.example  Dockerfile.backup  Dockerfile.production  pyproject.toml  requirements.txt
app/backend/app/: auth.py  clinical_routes.py  database.py  enhanced_models.py  main.py  main_enhanced.py  main_old.py  models.py  report_generator.py  schemas.py  security.py  translation_routes.py  translation_routes_enhanced.py  translator.py  translator_enhanced.py
app/frontend/: .env.example  .env.production  Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
app/frontend/pages/api/: chat.js
app/frontend/src/: i18n.ts  theme.ts
app/frontend/src/components/: HelpDialog.tsx  LanguageSwitcher.tsx
app/frontend/src/contexts/: LanguageContext.tsx  LanguageContextSimple.tsx
app/frontend/src/lib/: api.ts
app/frontend/src/pages/: _app.tsx  (+11 more)
(+4 files in other folders)
